# stock-agent

./: .gitignore  AGENTS.md  CLAUDE.md  api.py  closing_bet_strategy.py  daily_digest.py  pyproject.toml  stock_agent_cron.py  telegram_agent.py  test_firecrawl.py
.claude/: settings.json
.claude/agents/: backend-agent.md  frontend-agent.md  verify-agent.md
.claude/hooks/: deploy-on-stop.sh  guard-sensitive.sh  quality-gate.sh
core/: __init__.py  ai_service.py  ai_utils.py  config.py  filters.py  kiwoom_api.py  logging_setup.py  market_data.py  notifications.py  prompts.py  repository.py  sector_resolver.py  ticker.py  ticker_resolver.py  trading_engine.py
core/repository/: __init__.py  content.py  daily_summary.py  sector_report.py  source.py  stock_report.py  strategy_config.py  ticker.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/components/: AnimatedMarketIndexCard.tsx  CandlestickChart.tsx  (+14 more)
jongalab/: pyproject.toml
kiwoom/: README.md  api.py  pyproject.toml
kiwoom/core/: __init__.py  config.py  kiwoom_api.py
kiwoom/core/repository/: __init__.py  kiwoom_token.py
kiwoom/workers/: kiwoom_token_refresh.py
routers/: contents.py  daily_summary.py  market.py  source.py  stock_report.py  strategy_config.py  telegram_user.py  ticker.py
sql/: 1. create_database.sql  2. create_table.sql  3. alter.sql  4. create_daily_stock_report.sql  4. remove_us_market.sql
workers/: closing_bet.py  daily_digest.py  gap_check.py  telegram_listener.py  youtube_collector.py
(+113 files in other folders)
