[project]
name = "stock-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "feedparser>=6.0.12",
    "mysql-connector-python>=9.5.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "telethon>=1.42.0",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=1.2.4",
]
